bin_PROGRAMS = daytime_server_async daytime_server_sync daytime_client

daytime_server_async_SOURCES = daytime_server_async.cpp
daytime_server_async_LDADD = -lboost_system -lboost_thread -lboost_regex -lboost_date_time -lpthread

daytime_server_sync_SOURCES = daytime_server_sync.cpp
daytime_server_sync_LDADD = -lboost_system -lboost_thread -lboost_regex -lboost_date_time -lpthread

daytime_client_SOURCES = daytime_client.cpp
daytime_client_LDADD = -lboost_system -lboost_thread -lboost_regex -lboost_date_time -lpthread

