bin_PROGRAMS = blocking_tcp_echo_client blocking_tcp_echo_server async_tcp_echo_server 

blocking_tcp_echo_client_SOURCES = blocking_tcp_echo_client.cpp
blocking_tcp_echo_client_LDADD = -lboost_system -lboost_thread -lboost_regex -lboost_date_time -lpthread

blocking_tcp_echo_server_SOURCES = blocking_tcp_echo_server.cpp
blocking_tcp_echo_server_LDADD = -lboost_system -lboost_thread -lboost_regex -lboost_date_time -lpthread

async_tcp_echo_server_SOURCES = async_tcp_echo_server.cpp
async_tcp_echo_server_LDADD = -lboost_system -lboost_thread -lboost_regex -lboost_date_time -lpthread

